--- a/tests/js/Carousel/live/live.html
+++ b/tests/js/Carousel/live/live.html
@@ -7,24 +7,20 @@
     <!--    CSS for carousels -->
     <link href="live.css" type="text/css" rel="stylesheet"/>
 
-    <script type="text/javascript" src="../../../mootools-debug.js"></script>
-    <script type="text/javascript" src="../../../mootools-more-debug.js"></script>
-    <script type="text/javascript" src="../../../mootools-ext-debug.js"></script>
-    <script type="text/javascript" src="../../../Energine.js"></script>
-    <script type="text/javascript" src="../Carousel.js"></script>
+    <script type="text/javascript" src="../../../../core/modules/share/scripts/mootools-debug.js"></script>
+    <script type="text/javascript" src="../../../../core/modules/share/scripts/mootools-more-debug.js"></script>
+    <script type="text/javascript" src="../../../../core/modules/share/scripts/mootools-ext-debug.js"></script>
+    <script type="text/javascript" src="../../../../core/modules/share/scripts/Carousel.js"></script>
     <script type="text/javascript">
-        // Set resizer URL
-        Energine.resizer = 'http://media.stb.ua/resizer/';
-
         window.addEvent('domready', function () {
-            playlist = new CarouselPlaylist('div#carousel_playlist');
+            playlist = new CarouselPlaylist('carousel_playlist');
             car1 = new Carousel('carousel1', {
                 carousel: {
                     type: 'loop',
                     playlist: playlist
                 }
             });
-            car2 = new Carousel('carousel2'/*, {
+            car2 = new Carousel('carousel2', {
                 carousel: {
                     type: 'line',
                     NVisibleItems: 5,
@@ -34,14 +30,8 @@
                         transition: 'back:in:out'
                     }
                 }
-            }*/);
-            carConn = new CarouselConnector([car1,car2]);
-            playlist.hide();
-
-            // Resize images in first carousel
-            car1.carousel.items.each(function(item) {
-                Energine.resize(item.getElement('img'), item.getAttribute('data-src'), 555, 370, 'r');
             });
+            carConn = new CarouselConnector([car1,car2]);
         });
     </script>
 
@@ -50,74 +40,54 @@
 
 <div class="carousel_box">
     <div class="carousel_title">Carousel #1:</div>
-    <div class="carousel" id='carousel1' style="display: block;">
+    <div class="carousel" id='carousel1'>
         <div class="carousel_viewbox viewbox big">
         </div>
-        <a class="icon20x20 previous_control previous" href="#"><i>&lt</i></a>
-        <a class="icon20x20 next_control next" href="#"><i>&gt</i></a>
+        <a class="icon20x20 previous_control previous" href="#"><i></i></a>
+        <a class="icon20x20 next_control next" href="#"><i></i></a>
     </div>
 </div>
 
 <div class="carousel_box">
     <div class="carousel_title">Carousel #2:</div>
-    <div class="carousel" id='carousel2' style="display: block;" data-carousel="{
-                carousel: {
-                    type: 'line',
-                    NVisibleItems: 5,
-                    scrollStep: 3,
-                    playlist: playlist,
-                    fx: {
-                        transition: 'back:in:out'
-                    }
-                }
-            }">
+    <div class="carousel" id='carousel2'>
         <div class="carousel_viewbox viewbox small">
         </div>
-        <a class="icon20x20 previous_control previous" href="#"><i>&lt</i></a>
-        <a class="icon20x20 next_control next" href="#"><i>&gt</i></a>
+        <a class="icon20x20 previous_control previous" href="#"><i></i></a>
+        <a class="icon20x20 next_control next" href="#"><i></i></a>
     </div>
 </div>
 
 <div id='carousel_playlist'>
-    <div class="item" data-src="uploads/public/20111028/13198058503271.jpg">
-        <img src="http://media.stb.ua/resizer/rw90-h68/uploads/public/20111028/13198058503271.jpg"
-            alt="13198058503271.jpg"/>
+    <div class="item">
+        <p>Item 0</p>
     </div>
-    <div class="item" data-src="uploads/public/20120202/13281803644997.jpg">
-        <img src="http://media.stb.ua/resizer/rw90-h68/uploads/public/20120202/13281803644997.jpg"
-            alt="13281803644997.jpg"/>
+    <div class="item">
+        <p>Item 1</p>
     </div>
-    <div class="item" id="2" data-src="uploads/public/20120202/13281803678179.jpg">
-        <img src="http://media.stb.ua/resizer/rw90-h68/uploads/public/20120202/13281803678179.jpg"
-            alt="13281803678179.jpg"/>
+    <div class="item">
+        <p>Item 2</p>
     </div>
-    <div class="item" data-src="uploads/public/20120202/13281803698772.jpg">
-        <img src="http://media.stb.ua/resizer/rw90-h68/uploads/public/20120202/13281803698772.jpg"
-            alt="13281803698772.jpg"/>
+    <div class="item">
+        <p>Item 3</p>
     </div>
-    <div class="item" data-src="uploads/public/20120202/13281803736558.jpg">
-        <img src="http://media.stb.ua/resizer/rw90-h68/uploads/public/20120202/13281803736558.jpg"
-            alt="13281803736558.jpg"/>
+    <div class="item">
+        <p>Item 4</p>
     </div>
-    <div class="item" data-src="uploads/public/20120202/1328180376512.jpg">
-        <img src="http://media.stb.ua/resizer/rw90-h68/uploads/public/20120202/1328180376512.jpg"
-            alt="1328180376512.jpg"/>
+    <div class="item">
+        <p>Item 5</p>
     </div>
-    <div class="item" data-src="uploads/public/20120202/13281803797651.jpg">
-        <img src="http://media.stb.ua/resizer/rw90-h68/uploads/public/20120202/13281803797651.jpg"
-            alt="13281803797651.jpg"/>
+    <div class="item">
+        <p>Item 6</p>
     </div>
-    <div class="item" data-src="uploads/public/20111028/13198055379812.jpg">
-        <img src="http://media.stb.ua/resizer/rw90-h68/uploads/public/20111028/13198055379812.jpg"
-            alt="13198055379812.jpg"/>
+    <div class="item">
+        <p>Item 7</p>
     </div>
-    <div class="item" data-src="uploads/public/20111028/13198055479529.jpg">
-        <img src="http://media.stb.ua/resizer/rw90-h68/uploads/public/20111028/13198055479529.jpg"
-            alt="13198055479529.jpg"/>
+    <div class="item">
+        <p>Item 8</p>
     </div>
-    <div class="item" data-src="uploads/public/20111028/13198055506097.jpg">
-        <img src="http://media.stb.ua/resizer/rw90-h68/uploads/public/20111028/13198055506097.jpg"
-            alt="13198055506097.jpg"/>
+    <div class="item">
+        <p>Item 9</p>
     </div>
 </div>
 </body>
