Carousel.js: fixed first required cloning. Update tests for Carousel 3.0

--- a/tests/js/Carousel/live/live.html
+++ b/tests/js/Carousel/live/live.html
@@ -60,34 +60,34 @@
 
 <div id='carousel_playlist'>
     <div class="item">
-        <p>Item 0</p>
+        <div>Item 0</div>
     </div>
     <div class="item">
-        <p>Item 1</p>
+        <div>Item 1</div>
     </div>
     <div class="item">
-        <p>Item 2</p>
+        <div>Item 2</div>
     </div>
     <div class="item">
-        <p>Item 3</p>
+        <div>Item 3</div>
     </div>
     <div class="item">
-        <p>Item 4</p>
+        <div>Item 4</div>
     </div>
     <div class="item">
-        <p>Item 5</p>
+        <div>Item 5</div>
     </div>
     <div class="item">
-        <p>Item 6</p>
+        <div>Item 6</div>
     </div>
     <div class="item">
-        <p>Item 7</p>
+        <div>Item 7</div>
     </div>
     <div class="item">
-        <p>Item 8</p>
+        <div>Item 8</div>
     </div>
     <div class="item">
-        <p>Item 9</p>
+        <div>Item 9</div>
     </div>
 </div>
 </body>
