Carousel.js 3.0: tests for loop mechanism looks like finished; fixed bugs by testing

--- a/tests/js/Carousel/live/live.html
+++ b/tests/js/Carousel/live/live.html
@@ -22,9 +22,9 @@
             });
             car2 = new Carousel('carousel2', {
                 carousel: {
-                    type: 'line',
-                    NVisibleItems: 5,
-                    scrollStep: 3,
+                    type: 'loop',
+                    NVisibleItems: 6,
+                    scrollStep: 5,
                     playlist: playlist,
                     fx: {
                         transition: 'back:in:out'
